# TradeTutor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railway.json  taskfile.yaml
.github/workflows/: tests.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/src/api/: __init__.py  dispatch.py  main.py
apps/api/src/api/auth/: __init__.py  jwt.py  password.py  routes.py
apps/api/src/api/billing/: __init__.py  metering.py  routes.py  stripe_client.py
apps/api/src/api/db/: __init__.py  database.py  models.py
apps/api/src/api/db/migrations/: env.py
apps/api/src/api/db/migrations/versions/: c3768591d42a_initial_schema.py
apps/api/src/api/referrals/: __init__.py  routes.py
apps/api/src/api/security/: __init__.py  email_validator.py  risk_scoring.py  turnstile.py
apps/api/tests/: test_api.py
apps/web/: README.md  index.html  vercel.json
docs/: LOGIC_REVIEW_METHODOLOGY.md  MIGRATION.md  RESEARCH_BASED_UPGRADES.md  UX_HEURISTIC_AUDIT.md  WORLD_CLASS_UX_ANALYSIS.md  architecture.md  decision-log.md
src/: agent.py
